--- a/index.html
+++ b/index.html
@@ -1,126 +1,205 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LanggananSantuy - Premium Murah, Hidup Makin Seru!</title>
-    <meta name="description" content="Jualan langganan premium Netflix, YouTube, Spotify termurah, anti ribet, anti kantong kering. Santuy, aman, terpercaya!">
-    <style>
-        body {
-            font-family: 'Segoe UI', Arial, sans-serif;
-            background: #F5F6FA;
-            color: #222;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background: #fff;
-            padding: 2rem 1rem 1rem 1rem;
-            text-align: center;
-            border-bottom: 1px solid #ececec;
-        }
-        .brand {
-            font-size: 2.5rem;
-            font-weight: bold;
-            color: #4B61D1;
-            letter-spacing: 2px;
-        }
-        .tagline {
-            font-size: 1.2rem;
-            margin: 0.5rem 0 0.5rem 0;
-            color: #777;
-        }
-        main {
-            max-width: 500px;
-            margin: 2rem auto;
-            background: #fff;
-            border-radius: 16px;
-            box-shadow: 0 8px 32px rgba(44,62,80,0.10);
-            padding: 2rem;
-        }
-        h2 {
-            color: #4B61D1;
-            margin-top: 0;
-        }
-        ul {
-            padding-left: 1.5rem;
-            margin-bottom: 1.5rem;
-        }
-        .product-list li {
-            margin-bottom: 1rem;
-            font-size: 1.1rem;
-        }
-        .humor {
-            background: #E8ECFD;
-            color: #222;
-            padding: 1rem;
-            border-radius: 12px;
-            margin-bottom: 1.5rem;
-            font-style: italic;
-        }
-        .contact {
-            display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
-            margin-top: 2rem;
-            padding: 1rem;
-            background: #f1f3f9;
-            border-radius: 10px;
-            font-size: 1rem;
-        }
-        .contact strong {
-            color: #4B61D1;
-        }
-        footer {
-            text-align: center;
-            font-size: 0.9rem;
-            color: #aaa;
-            margin-top: 2rem;
-            padding-bottom: 1rem;
-        }
-        @media (max-width:600px) {
-            main {
-                padding: 1rem;
-            }
-            .brand { font-size: 2rem; }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Langganan Santuy - Streaming Premium, Harga Santai</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --primary: #111;
+      --accent: #fff;
+      --gray: #222;
+      --btn: #e50914;
+      --spotify: #1db954;
+      --youtube: #ff0000;
+      --premium: #f3c623;
+      --shadow: 0 4px 24px rgba(0,0,0,0.15);
+    }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: 'Montserrat', sans-serif;
+      background: var(--primary);
+      color: var(--accent);
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    header {
+      padding: 2rem 0 1rem 0;
+      text-align: center;
+    }
+    .logo {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: .75rem;
+      margin-bottom: .5rem;
+    }
+    .logo-icon {
+      width: 40px;
+      height: 40px;
+      background: linear-gradient(135deg, var(--premium), var(--btn));
+      border-radius: 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.7em;
+      font-weight: bold;
+      color: var(--gray);
+      box-shadow: var(--shadow);
+    }
+    h1 {
+      font-size: 2.1rem;
+      font-weight: 700;
+      letter-spacing: 1px;
+      margin-bottom: .5rem;
+    }
+    .tagline {
+      font-size: 1.08rem;
+      color: #bbb;
+      margin-bottom: 1.5rem;
+      font-style: italic;
+    }
+    .services {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2rem;
+      margin: 2rem 0 2.5rem 0;
+    }
+    .card {
+      background: var(--gray);
+      border-radius: 18px;
+      box-shadow: var(--shadow);
+      width: 170px;
+      padding: 1.5rem 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: .5rem;
+      transition: transform .2s;
+    }
+    .card:hover {
+      transform: scale(1.06) rotate(-2deg);
+    }
+    .card-icon {
+      width: 44px;
+      height: 44px;
+      border-radius: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 2em;
+      margin-bottom: .2rem;
+    }
+    .netflix {background: var(--btn);}
+    .spotify {background: var(--spotify);}
+    .youtube {background: var(--youtube);}
+    .premium {background: var(--premium); color: #222;}
+    .card-title {
+      font-size: 1.08rem;
+      font-weight: 700;
+      margin-bottom: .2rem;
+      text-align: center;
+    }
+    .card-desc {
+      font-size: .95rem;
+      color: #bbb;
+      text-align: center;
+      margin-bottom: .1rem;
+    }
+    .card-price {
+      font-weight: bold;
+      margin-top: .3rem;
+      color: var(--premium);
+      font-size: 1.05rem;
+    }
+    .contact {
+      background: var(--gray);
+      border-radius: 16px;
+      padding: 1.2rem 1.3rem;
+      box-shadow: var(--shadow);
+      margin-bottom: 2.5rem;
+      text-align: center;
+      font-size: 1.02rem;
+    }
+    .contact b {
+      color: var(--premium);
+      font-size: 1.08em;
+    }
+    footer {
+      color: #888;
+      font-size: .95rem;
+      padding-bottom: 1.2rem;
+      text-align: center;
+      margin-top: auto;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <div class="brand">LanggananSantuy</div>
-        <div class="tagline">Premium? Santuy aja! Harga bersahabat, hidup makin nikmat.</div>
-    </header>
-    <main>
-        <div class="humor">
-            <span>🤑</span> Mau nonton Netflix, dengerin Spotify, atau skip iklan YouTube, tapi dompet menipis? Di sini tempatnya, bro! Biar premium, tetep santuy~<br>
-            <span>💡</span> Hidup sudah berat, langganan jangan ikut berat.
-        </div>
-
-        <h2>Pilihan Langganan</h2>
-        <ul class="product-list">
-            <li><b>Netflix Premium</b> - Mulai dari <b>Rp 30.000/bulan</b></li>
-            <li><b>Spotify Premium</b> - Mulai dari <b>Rp 15.000/bulan</b></li>
-            <li><b>YouTube Premium</b> - Mulai dari <b>Rp 18.000/bulan</b></li>
-            <li><i>Dan masih banyak lagi! (Disney+, Vidio, Canva, dll)</i></li>
-        </ul>
-        <div>
-            <b>Kenapa harus di LanggananSantuy?</b>
-            <ul>
-                <li>Harga <span style="color:#4B61D1">ramah dompet</span> (bukan dompet kering!)</li>
-                <li>Proses cepat, <b>anti drama</b> & <b>anti ribet</b></li>
-                <li>Layanan <b>aman & terpercaya</b></li>
-                <li>Konsultasi gratis, curhat boleh, asal jangan minta gratisan 🥲</li>
-            </ul>
-        </div>
-        <div class="contact">
-            <strong>Kontak & Pemesanan:</strong>
-            <span>📱 WhatsApp: <a href="https://wa.me/6289519159638" target="_blank">+62 895-1915-9638</a></span>
-            <span>📍 Alamat: Pejagoan, Kebumen</span>
-        </div>
-    </main>
-    <footer>
-        &copy; 2025 LanggananSantuy &mdash; Premium? Santuy aja!
-    </footer>
+  <header>
+    <div class="logo">
+      <div class="logo-icon">🍿</div>
+      <span style="font-size:1.6rem;font-weight:700">Langganan Santuy</span>
+    </div>
+    <h1>Streaming Premium, Hidup Santai</h1>
+    <div class="tagline">
+      Gak perlu jadi sultan buat nonton dan dengerin yang premium.<br>
+      Santuy aja, dompet tetap aman, hati tetap senang!
+    </div>
+  </header>
+  <section class="services">
+    <div class="card">
+      <div class="card-icon netflix">
+        <!-- Netflix Logo SVG -->
+        <svg width="32" height="32" viewBox="0 0 32 32"><rect x="10" y="5" width="4" height="22" rx="2" fill="#fff"/><rect x="18" y="5" width="4" height="22" rx="2" fill="#fff"/></svg>
+      </div>
+      <div class="card-title">Netflix Premium</div>
+      <div class="card-desc">Nonton tanpa drama buffering, kecuali drama Korea!</div>
+      <div class="card-price">Mulai 39K/bulan</div>
+    </div>
+    <div class="card">
+      <div class="card-icon spotify">
+        <!-- Spotify Logo SVG -->
+        <svg width="32" height="32" viewBox="0 0 32 32"><circle cx="16" cy="16" r="14" fill="#fff"/><path d="M9 22a9 9 0 0 1 14 0" stroke="#1db954" stroke-width="2" fill="none"/></svg>
+      </div>
+      <div class="card-title">Spotify Premium</div>
+      <div class="card-desc">Musik bebas iklan, cocok buat mantan yang selalu skip.</div>
+      <div class="card-price">Mulai 25K/bulan</div>
+    </div>
+    <div class="card">
+      <div class="card-icon youtube">
+        <!-- YouTube Logo SVG -->
+        <svg width="32" height="32" viewBox="0 0 32 32"><rect x="4" y="9" width="24" height="14" rx="5" fill="#fff"/><polygon points="15,13 22,16 15,19" fill="#ff0000"/></svg>
+      </div>
+      <div class="card-title">YouTube Premium</div>
+      <div class="card-desc">Skip iklan, skip drama, langsung viral!</div>
+      <div class="card-price">Mulai 29K/bulan</div>
+    </div>
+    <div class="card">
+      <div class="card-icon premium">
+        <!-- Other Services Icon -->
+        <svg width="32" height="32" viewBox="0 0 32 32"><circle cx="16" cy="16" r="13" fill="#222"/><text x="16" y="21" text-anchor="middle" font-size="18" fill="#f3c623" font-family="Arial">+</text></svg>
+      </div>
+      <div class="card-title">Layanan Lainnya</div>
+      <div class="card-desc">Disney+, Apple Music, Viu, dan lain-lain. Santuy bareng, harga tetap waras!</div>
+      <div class="card-price">Mulai 15K/bulan</div>
+    </div>
+  </section>
+  <section class="contact">
+    <b>Yuk, tanya-tanya atau langsung langganan:</b><br>
+    <span>WhatsApp: <a href="https://wa.me/6289519159638" style="color:#f3c623;text-decoration:none" target="_blank">+62 895-1915-9638</a></span><br>
+    <span style="font-size:.97em;color:#bbb;">(Fast respon, slow motion cuma di video)</span>
+  </section>
+  <footer>
+    &copy; 2025 Langganan Santuy 🍿 | Hidup santai, streaming tetap jalan!
+  </footer>
 </body>
 </html>
