Update contact section with new Telegram and WhatsApp links
Signed-off-by: project <musago354@gmail.com>

--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
   </section>
   <section class="contact">
     <b>Yuk, tanya-tanya atau langsung langganan:</b><br>
-    <span>Telegram: <a href="https://t.me/LanaDelvRed" style="color:#f3c623;text-decoration:none" target="_blank">https://t.me/LanaDelvRed</a></span><br>
+    <span>Telegram: <a href="https://t.me/LanaDelvRed" style="color:#f3c623;text-decoration:none" target="_blank">ORDER TELEGRAM</a></span><br>
+    <span>WhatsApp: <a href="https://wa.me/+6289519159638" style="color:#f3c623;text-decoration:none" target="_blank">ORDER WHATSAPP</a></span><br>
     <span style="font-size:.97em;color:#bbb;">(Fast respon, slow motion cuma di video)</span>
   </section>
   <footer>
