Update subscription prices in index.html
Signed-off-by: project <musago354@gmail.com>

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
       <div class="card-title">Netflix Premium</div>
       <div class="card-desc">Nonton tanpa drama buffering, kecuali drama Korea!</div>
-      <div class="card-price">Mulai 39K/bulan</div>
+      <div class="card-price">Mulai 20K/bulan</div>
     </div>
     <div class="card">
       <div class="card-icon spotify">
@@ -181,8 +181,8 @@
       </div>
       <div class="card-title">YouTube Premium</div>
       <div class="card-desc">Skip iklan, skip drama, langsung viral!</div>
-      <div class="card-price">Mulai 29K/bulan</div>
-    </div>
+      <div class="card-price">Mulai 5K/bulan</div>
+    </div
     <div class="card">
       <div class="card-icon premium">
         <!-- Other Services Icon -->
