--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
       <div class="card-title">Netflix Premium</div>
       <div class="card-desc">Nonton tanpa drama buffering, kecuali drama Korea!</div>
-      <div class="card-price">Mulai 20K/bulan</div>
+      <div class="card-price">Mulai 39K/bulan</div>
     </div>
     <div class="card">
       <div class="card-icon spotify">
@@ -181,8 +181,8 @@
       </div>
       <div class="card-title">YouTube Premium</div>
       <div class="card-desc">Skip iklan, skip drama, langsung viral!</div>
-      <div class="card-price">Mulai 5K/bulan</div>
-    </div
+      <div class="card-price">Mulai 29K/bulan</div>
+    </div>
     <div class="card">
       <div class="card-icon premium">
         <!-- Other Services Icon -->
@@ -195,8 +195,7 @@
   </section>
   <section class="contact">
     <b>Yuk, tanya-tanya atau langsung langganan:</b><br>
-    <span>Telegram: <a href="https://t.me/LanaDelvRed" style="color:#f3c623;text-decoration:none" target="_blank">ORDER TELEGRAM</a></span><br>
-    <span>WhatsApp: <a href="https://wa.me/+6289519159638" style="color:#f3c623;text-decoration:none" target="_blank">ORDER WHATSAPP</a></span><br>
+    <span>WhatsApp: <a href="https://wa.me/6289519159638" style="color:#f3c623;text-decoration:none" target="_blank">+62 895-1915-9638</a></span><br>
     <span style="font-size:.97em;color:#bbb;">(Fast respon, slow motion cuma di video)</span>
   </section>
   <footer>
