Revise service descriptions and update prices
Updated pricing and descriptions for various services.

Signed-off-by: project <musago354@gmail.com>

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
         <svg width="32" height="32" viewBox="0 0 32 32"><rect x="10" y="5" width="4" height="22" rx="2" fill="#fff"/><rect x="18" y="5" width="4" height="22" rx="2" fill="#fff"/></svg>
       </div>
       <div class="card-title">Netflix Premium</div>
-      <div class="card-desc">Nonton tanpa drama buffering, kecuali drama Korea!</div>
-      <div class="card-price">Mulai 39K/bulan</div>
+      <div class="card-desc">Nonton tanpa drama buffering</div>
+      <div class="card-price">Mulai 6K/bulan</div>
     </div>
     <div class="card">
       <div class="card-icon spotify">
@@ -171,8 +171,8 @@
         <svg width="32" height="32" viewBox="0 0 32 32"><circle cx="16" cy="16" r="14" fill="#fff"/><path d="M9 22a9 9 0 0 1 14 0" stroke="#1db954" stroke-width="2" fill="none"/></svg>
       </div>
       <div class="card-title">Spotify Premium</div>
-      <div class="card-desc">Musik bebas iklan, cocok buat mantan yang selalu skip.</div>
-      <div class="card-price">Mulai 25K/bulan</div>
+      <div class="card-desc">Musik bebas iklan</div>
+      <div class="card-price">Mulai 20K/bulan</div>
     </div>
     <div class="card">
       <div class="card-icon youtube">
@@ -180,8 +180,8 @@
         <svg width="32" height="32" viewBox="0 0 32 32"><rect x="4" y="9" width="24" height="14" rx="5" fill="#fff"/><polygon points="15,13 22,16 15,19" fill="#ff0000"/></svg>
       </div>
       <div class="card-title">YouTube Premium</div>
-      <div class="card-desc">Skip iklan, skip drama, langsung viral!</div>
-      <div class="card-price">Mulai 29K/bulan</div>
+      <div class="card-desc">Skip iklan,Skip drama</div>
+      <div class="card-price">Mulai 4K/bulan</div>
     </div>
     <div class="card">
       <div class="card-icon premium">
@@ -190,16 +190,18 @@
       </div>
       <div class="card-title">Layanan Lainnya</div>
       <div class="card-desc">Disney+, Apple Music, Viu, dan lain-lain. Santuy bareng, harga tetap waras!</div>
-      <div class="card-price">Mulai 15K/bulan</div>
+      <div class="card-price">Mulai 10K/bulan</div>
     </div>
   </section>
   <section class="contact">
     <b>Yuk, tanya-tanya atau langsung langganan:</b><br>
-    <span>WhatsApp: <a href="https://wa.me/6289519159638" style="color:#f3c623;text-decoration:none" target="_blank">+62 895-1915-9638</a></span><br>
+    <span>WhatsApp: <a href="https://wa.me/6289519159638" style="color:#f3c623;text-decoration:none" target="_blank">WHATSAPP</a></span><br>
+    <span>Telegram: <a href="https://t.me/LanaDelvRed" style="color:#f3c623;text-decoration:none" target="_blank">TELEGRAM</a></span><br>
+  
     <span style="font-size:.97em;color:#bbb;">(Fast respon, slow motion cuma di video)</span>
   </section>
   <footer>
-    &copy; 2025 Langganan Santuy 🍿 | Hidup santai, streaming tetap jalan!
+    &copy; 2026 Langganan Santuy 🍿 | Hidup santai, streaming tetap jalan!
   </footer>
 </body>
 </html>
